making the list of extensions allowed configurable without code change