@@ -1,27 +1,32 @@
 package com.fileuploadex.validator;
 
-import java.util.Locale;
+import java.util.Objects;
+import java.util.Set;
 
 /**
- * Simple validator that allows only .txt and .csv files (case-insensitive).
+ * Validates that extensions of file are allowed as per config.
  */
 public final class SimpleFileTypeValidator implements FileTypeValidator {
 
+    private final Set<String> allowedExtensions;
+
+    public SimpleFileTypeValidator(Set<String> allowedExtensions) {
+        Objects.requireNonNull(allowedExtensions, "allowedExtensions must not be null");
+        this.allowedExtensions = Set.copyOf(allowedExtensions);
+    }
+
     @Override
     public boolean isAllowed(String fileName) {
-        if (fileName == null || fileName.trim().isEmpty()) {
+        if (fileName == null || fileName.isBlank()) {
             return false;
         }
 
-        int dotIndex = fileName.lastIndexOf('.');
-        if (dotIndex <= 0 || dotIndex == fileName.length() - 1) {
-            // No extension or dot at the end.
-            return false;
+        int dot = fileName.lastIndexOf('.');
+        if (dot < 0 || dot == fileName.length() - 1) {
+            return false; // no extension or trailing dot
         }
 
-        String extension = fileName.substring(dotIndex + 1)
-                                   .toLowerCase(Locale.ROOT);
-
-        return "txt".equals(extension) || "csv".equals(extension);
+        String ext = fileName.substring(dot + 1).trim().toLowerCase();
+        return allowedExtensions.contains(ext);
     }
 }
